breaks code into modules, adds spell checking, translation and caching

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 TelegramBot_env
-Telegram_Bot.ipynb
-VisionAPI.ipynb
-FindText.ipynb
-FacebookDescr.ipynb
+pythonNoteBooks
 ksenia_html.html
 .ipynb_checkpoints
+__pycache__
