--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 certifi==2019.11.28
 chardet==3.0.4
 cycler==0.10.0
-googletrans==2.4.0
+googletrans
 idna==2.8
 kiwisolver==1.1.0
 matplotlib==3.1.2
